# moat

./: .dockerignore  .env.example  .gitignore  ANALYSIS.md  CLAUDE.md  Dockerfile  Dockerfile.agent  PLAN.md  README.md  TODO.md  agent-entrypoint.sh  agent.sh  anvil.sh  auto-diagnostics.sh  aws-proxy-wrapper.sh  cloudbuild.yaml  config.local.yaml  config.yaml  devcontainer.json  docker-compose.extra-dirs.yml  docker-compose.yml  generate-project-config.mjs  gh-proxy-wrapper.sh  git-proxy-wrapper.sh  ide-lsp.mjs  ide-tools.mjs  idea.txt  install.sh  jira-proxy-wrapper.sh  kubectl-proxy-wrapper.sh  moat-claude.md  moat.example.yml  moat.mjs  moat.sh  pyproject.toml  quality-gate.sh  render.yaml  secrets-scan.sh  setup.sh  squid.conf  (+8 more)
.beads/: issues.jsonl
deploy/: gcloud-secrets.sh  gcloud-setup.sh
docs/: architecture.md  evolution-plan.md  ideas.md  project-plan.md  setup.md  stale-mcp-configs-bug.md  usage.md  vibe-coding-alignment.md
intel/: __init__.py  __main__.py  config.py  db.py  models.py  pipeline.py  retry.py
lib/: allow-domain.mjs  attach.mjs  audit-view.mjs  audit.mjs  claude-md.mjs  cli.mjs  colors.mjs  compose.mjs  container.mjs  detect.mjs  dispatch.mjs  doctor.mjs  down.mjs  exec.mjs  hooks.mjs  init-config.mjs  instructions.mjs  mcp-servers.mjs  memory.mjs  proxy.mjs  ps.mjs  rewind.mjs  secrets.mjs  settings.mjs  skills.mjs  update.mjs  workspace-id.mjs  yaml.mjs
scripts/: preview_mini_app.py  setup_telegram.py  test_sources.py
tests/: conftest.py  test_analyzers.py  test_bluesky.py  test_cluster.py  test_config.py  test_db.py  test_dedup.py  (+14 more)
(+49 files in other folders)
